[package]
name = "nix-editor"
version = "0.3.0"
edition = "2024"
license = "MIT"
description = "Some functions to modify NixOS configuration files"
repository = "https://github.com/vlinkz/nix-editor/"
readme = "README.md"
include = [
  "src/*",
  "Cargo.toml",
  "LICENSE*",
  "README.md",
]

[dependencies]
clap =  { version = "4.5.55", features = ["derive"] }
rnix = "0.12"
owo-colors = "4.2.3"
thiserror = "2.0.18"
nixpkgs-fmt = "1.3"
